[package]
name = "crab_subtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
color-eyre = "0.6.2"
git2 = "0.15.0"
log = "0.4.17"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
